--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ android {
 }
 
 dependencies {
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-v13:27.1.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     //noinspection GradleCompatible
